# picoTracer

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh  setenv.sh
codecs/: log_c.gsl  log_lib.gsl  log_python.gsl  log_tests.gsl  trace_c.gsl  trace_lib.gsl  trace_python.gsl  trace_tests.gsl
example/src/: example_1.c
images/: fig1.txt  fig2.txt
include/: platform.h  rb.h  trace_platform.h
models/: fsm.xml  generate.sh
python/: Log.py  PicoSpy.py  PicoTrace.py  PicoTracer.py  TraceDecoder.py
src/: rb.c
tools/: gen_images.sh
